# rainbow-triangle

./: CMakeLists.txt  README.md
include/glad/: gl.h
src/: main.cpp
